<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group_calendar_items"
        android:visible="false">
        <item
            android:id="@+id/item_add_shift"
            android:title="@string/add_shift_string"/>
        <item
            android:id="@+id/item_edit_shift"
            android:title="@string/edit_shift_string"/>
    </group>
    <group
        android:id="@+id/group_staff_items"
        android:visible="false">
        <item
            android:id="@+id/item_add_staff"
            android:title="@string/add_staff_string"/>
    </group>
</menu>