<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ActivityAddStaff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AvailabilityActivity" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/availability_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availability_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sundayText"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/sunday"
                android:gravity="center_vertical"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/sunday_spinner"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mondayText"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/monday"
                android:gravity="center_vertical"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/monday_spinner"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tuesdayText"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/tuesday"
                android:gravity="center_vertical"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/tuesday_spinner"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="3" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wednesdayText"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/wednesday"
                android:gravity="center_vertical"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/wednesday_spinner"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/thursdayText"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/thursday"
                android:gravity="center_vertical"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/thursday_spinner"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fridayText"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/friday"
                android:gravity="center_vertical"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/friday_spinner"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/saturdayText"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/saturday"
                android:gravity="center_vertical"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/saturday_spinner"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/availability_skip_button"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="22sp"
                android:text="@string/skip" />

            <Button
                android:id="@+id/availability_submit_button"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="22sp"
                android:text="@string/submit" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>