<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selected"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectedEmployeeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/selected_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/face"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:contentDescription="@string/headshot"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:src="@drawable/ic_smile" />

            <TextView
                android:id="@+id/nameLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/name"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phoneLine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/phone_number"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/secondPhoneLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="textEnd"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailLine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/email"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/secondEmailLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:textAlignment="textEnd"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trainedToOpemLine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/trained_to_open"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/secondTrainedToOpenLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="textEnd"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trainedToCloseLine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/trained_to_close"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/secondTrainedToCloseLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="textEnd"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:textSize="22sp" />

        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="40dp"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/employedLine"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center_vertical"-->
<!--                android:maxLines="1"-->
<!--                android:paddingLeft="20dip"-->
<!--                android:paddingRight="20dip"-->
<!--                android:text="@string/employed"-->
<!--                android:textSize="22sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/secondAgeLine"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:textAlignment="textEnd"-->
<!--                android:maxLines="1"-->
<!--                android:paddingLeft="20dp"-->
<!--                android:paddingRight="20dp"-->
<!--                android:textSize="22sp" />-->

<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"

            android:orientation="vertical">

            <TextView
                android:id="@+id/upcomingShiftLine"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/upcoming_shifts2"
                android:textSize="22sp" />


            <ListView
                android:id="@+id/notif_upcoming_events_list"
                android:background="@drawable/border_set"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/back"
                android:textSize="22sp" />

            <Button
                android:id="@+id/editButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/edit"
                android:textSize="22sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
